--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
 	"author": "",
 	"license": "ISC",
 	"dependencies": {
+		"config": "^3.3.7",
+		"cors": "^2.8.5",
 		"express": "^4.17.3",
 		"mongoose": "^6.2.10"
 	},
